<resources>
    <string name="app_name">Train Brain</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="long_app_name">Brain Training Game</string>
    <string name="label_continue">Continue</string>
    <string name="label_newgame">New Game</string>
    <string name="label_about">About</string>
    <string name="label_exit">Exit</string>
    <string name="about_title">About Brain Training Game</string>
    <string name="about_text">About Text</string>
    <string name="ok_label">Ok</string>
    <string name="cancel_label">Cancel</string>
    <string name="state_title">Save Game</string>
    <string name="state_text">Do you want to Save the Game?</string>
    <string name="label_novice">NOVICE</string>
    <string name="label_guru">GURU</string>
    <string name="label_preferences">PREFERENCES</string>
    <string name="label_medium">MEDIUM</string>
    <string name="label_easy">EASY</string>
    <string name="difficulty">Difficulty Level</string>
    <string name="about">
        \ Press Start Button to start the Game.Use keyboard to type the answers and after your Answer press "#" to Check the Answer.
        \n\ \n\ All the answers should be rounded to the closest one.
        \n\ \n\For an Example,If your Answer is 5.5. Then it should be rounded to 6.
       \n\ \n\To Switch On Hints, Press "Preference" Button. With Hints On, You can try three times On each Question.
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
